--- a/Styling.css
+++ b/Styling.css
@@ -1,4 +1,4 @@
-p{color: blue; text-align: center;}
+p{color: blue; text-align: left;}
 table, th, td{
     border: 2px solid black; border-style: groove; border-collapse: collapse;
 }
